# LearnAndroid

./: build.gradle  gradle.properties  settings.gradle
annotation_compiler/: build.gradle
app/: build.gradle  proguard-rules.pro  readme.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: aidl.html
app/src/main/cpp/: CMakeLists.txt  Log.h  MemoryFile.cpp  MemoryFile.h  native-lib.cpp
app/src/main/java/: Student.java
app/src/main/proto/: Person.proto
app/src/main/res/drawable/: menu_select.xml
app/src/main/res/layout/: activity_animator.xml  activity_apmactivity.xml  activity_base_mvvm.xml  activity_concurrent.xml  activity_custom_view.xml  activity_data_base.xml  activity_demo.xml  activity_design_pattern.xml  activity_dsl.xml  activity_hot_fix.xml  activity_jetpack.xml  activity_jni.xml  activity_kotlin.xml  activity_main.xml  activity_memory.xml  activity_navigation.xml  activity_nested_scroll_view.xml  activity_pager2_video.xml  activity_pager_video.xml  activity_paging.xml  activity_plugin.xml  activity_recycler_cache.xml  activity_recycler_view_video.xml  activity_scope_storage.xml  activity_third_lib.xml  activity_user.xml  activity_user_info.xml  activity_view_pager.xml  activity_web_view.xml  activity_workmanager.xml  fragment_a.xml  fragment_b.xml  fragment_base_lazy.xml  fragment_first.xml  fragment_five.xml  fragment_four.xml  (+5 more)
gradle/wrapper/: gradle-wrapper.properties
pluggable/: build.gradle
pluggable/src/main/: AndroidManifest.xml
plugin/: build.gradle
shadowcore/: build.gradle
skin_core/: build.gradle  build.gradle.kts
(+307 files in other folders)
